--- a/src/assets/scss/components/card-item.scss
+++ b/src/assets/scss/components/card-item.scss
@@ -45,8 +45,20 @@
   &__img-container {
     width: 100%;
     height: 250px;
+    min-height: 250px;
     position: relative;
     z-index: 1;
+    background: $bg-banner;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+  }
+
+  &__img-preloader {
+    @include preloader;
+    width: 100%;
+    height: 250px;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
   }
 
   &__img {
